--- a/TennisTime/build.gradle
+++ b/TennisTime/build.gradle
@@ -1,7 +1,16 @@
 // Top-level build file where you can add configuration options common to all sub-projects/modules.
 
 buildscript {
-    ext.kotlin_version = '1.2.51'
+
+    ext {
+        kotlin_version = '1.3.11'
+        dokkaVersion = '0.9.17'
+        material_version = '1.0.0'
+        constraintLayout_version = '2.0.0-alpha2'
+        recyclerView_version = '1.0.0'
+        ext.glide_version = "4.8.0"
+    }
+
     repositories {
         google()
         jcenter()
@@ -9,6 +18,8 @@ buildscript {
     dependencies {
         classpath 'com.android.tools.build:gradle:3.2.1'
         classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlin_version"
+        classpath "org.jetbrains.dokka:dokka-android-gradle-plugin:$dokkaVersion"
+
 
         // NOTE: Do not place your application dependencies here; they belong
         // in the individual module build.gradle files
@@ -17,6 +28,7 @@ buildscript {
 
 allprojects {
     repositories {
+        maven { url "https://jitpack.io" }
         google()
         jcenter()
     }
