--- a/TennisTime/app/build.gradle
+++ b/TennisTime/app/build.gradle
@@ -38,7 +38,9 @@ dependencies {
     implementation "androidx.recyclerview:recyclerview:$recyclerView_version"
     implementation "com.github.bumptech.glide:glide:$glide_version"
 
-    // DOCUMENTATION
+    // ViewModel and LiveData
+    implementation "android.arch.lifecycle:extensions:$lifecycle_version"
+
 
 
 
