--- a/TennisTime/build.gradle
+++ b/TennisTime/build.gradle
@@ -8,7 +8,8 @@ buildscript {
         material_version = '1.0.0'
         constraintLayout_version = '2.0.0-alpha2'
         recyclerView_version = '1.0.0'
-        ext.glide_version = "4.8.0"
+        glide_version = "4.8.0"
+        lifecycle_version = '1.1.1'
     }
 
     repositories {
