--- a/TennisTime/app/build.gradle
+++ b/TennisTime/app/build.gradle
@@ -37,6 +37,7 @@ dependencies {
     implementation "com.google.android.material:material:$material_version"
     implementation "androidx.recyclerview:recyclerview:$recyclerView_version"
     implementation "com.github.bumptech.glide:glide:$glide_version"
+    implementation "de.hdodenhof:circleimageview:$hdodenhof_version"
 
     // ViewModel and LiveData
     implementation "android.arch.lifecycle:extensions:$lifecycle_version"
