--- a/TennisTime/build.gradle
+++ b/TennisTime/build.gradle
@@ -10,6 +10,7 @@ buildscript {
         recyclerView_version = '1.0.0'
         glide_version = "4.8.0"
         lifecycle_version = '1.1.1'
+        hdodenhof_version = '2.2.0'
     }
 
     repositories {
