--- a/TennisTime/build.gradle
+++ b/TennisTime/build.gradle
@@ -11,6 +11,7 @@ buildscript {
         glide_version = "4.8.0"
         lifecycle_version = '1.1.1'
         hdodenhof_version = '2.2.0'
+        dagger_version = '2.16'
     }
 
     repositories {
