--- a/TennisTime/build.gradle
+++ b/TennisTime/build.gradle
@@ -12,6 +12,9 @@ buildscript {
         lifecycle_version = '1.1.1'
         hdodenhof_version = '2.2.0'
         dagger_version = '2.16'
+        okHttp_version = '3.11.0'
+        gson_version = '2.8.5'
+        retrofit_version = '2.4.0'
     }
 
     repositories {
