--- a/TennisTime/build.gradle
+++ b/TennisTime/build.gradle
@@ -15,6 +15,9 @@ buildscript {
         okHttp_version = '3.11.0'
         gson_version = '2.8.5'
         retrofit_version = '2.4.0'
+        rxkotlin_version = '2.3.0'
+        rxjava_version = '2.2.3'
+        rxandroid_version = '2.1.0'
     }
 
     repositories {
