Add PlayerViewModel for playerfragment

--- a/TennisTime/app/build.gradle
+++ b/TennisTime/app/build.gradle
@@ -27,6 +27,9 @@ android {
         outputFormat = 'html'
         outputDirectory = "$buildDir/javadoc"
     }
+    dataBinding {
+        enabled = true
+    }
 }
 
 dependencies {
