--- a/TennisTime/build.gradle
+++ b/TennisTime/build.gradle
@@ -17,7 +17,10 @@ buildscript {
         retrofit_version = '2.4.0'
         rxkotlin_version = '2.3.0'
         rxjava_version = '2.2.3'
-        rxandroid_version = "2.1.0"
+        rxandroid_version = '2.1.0'
+        room_version = '2.0.0'
+        kotlin_stdlib_version = '1.3.11'
+        debugDb_version = '1.0.4'
     }
 
     repositories {
