--- a/TennisTime/app/build.gradle
+++ b/TennisTime/app/build.gradle
@@ -75,6 +75,9 @@ dependencies {
     // DEBUG DB
     debugImplementation "com.amitshekhar.android:debug-db:$debugDb_version"
 
+    // ANKO
+    implementation "org.jetbrains.anko:anko:$anko_version"
+
 
     implementation 'androidx.constraintlayout:constraintlayout:2.0.0-alpha2'
     testImplementation 'junit:junit:4.12'
