--- a/TennisTime/build.gradle
+++ b/TennisTime/build.gradle
@@ -21,6 +21,7 @@ buildscript {
         room_version = '2.0.0'
         kotlin_stdlib_version = '1.3.11'
         debugDb_version = '1.0.4'
+        anko_version = '0.10.8'
     }
 
     repositories {
